# romeo_description_mc

./: CMakeLists.txt  README.md  package.xml
etc/: rtc_test_gaze_task_romeo.conf  rtc_test_gaze_task_romeo_tracker.conf
launch/: rtc_test_gaze_task_romeo.launch  rtc_test_gaze_task_romeo_tracker.launch  rviz.xml  template_demo_romeo.launch  template_demo_romeo_real.launch  test_gaze_task_romeo.launch  test_gaze_task_romeo_tracker.launch  test_grippers_romeo.launch  test_visservo_grasp_gaze_romeo.launch  test_visservo_grasp_romeo.launch  whycon_romeo.launch
rtc_scripts/: rtc_fake_camera.py  rtc_movable_object.py  rtc_moving_object.py  rtc_test_gaze_task_romeo.py  rtc_test_gaze_task_romeo_tracker.py
rtc_scripts/helper_scripts/: rtc_abstract_interactive_marker.py  rtc_fake_vision.py  rtc_interactive_marker_helper.py  rtc_tasks_helper.py  rtc_transform.py
rviz_config/: rtc_test_gaze_task_romeo.rviz  rtc_test_gaze_task_romeo_tracker.rviz  template_demo_romeo.rviz  test_gaze_task_romeo.rviz  test_gaze_task_romeo_tracker.rviz  test_grippers_romeo.rviz  test_visservo_grasp_gaze_romeo.rviz  test_visservo_grasp_romeo.rviz
scripts/: fake_camera.py  movable_object.py  moving_object.py  setRomeoHalfSittingPose.py  template_demo_romeo.py  template_demo_romeo_real.py  test_gaze_task_romeo.py  test_gaze_task_romeo_tracker.py  test_grippers_romeo.py  test_visservo_grasp_gaze_romeo.py  test_visservo_grasp_romeo.py
scripts/helper_scripts/: abstract_interactive_marker.py  fake_vision.py  gain_interpolator.py  plot_task_error.py  (+3 more)
urdf/: beam.urdf  cylinder.urdf  small_box.urdf
