<?xml version="1.0"?>
<package>
  <name>romeo_mc</name>
  <version>0.1.0</version>
  <description>The romeo_mc package</description>

  <maintainer email="don-joven.agravante@inria.fr">joven</maintainer>
  <maintainer email="giovanni.claudio@inria.fr">joven</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
